@@ -1,3 +1,12 @@
+2011-02-18 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* support/scripts/sdcc.nsi:
+	  Merge from trunk.
+	* src/z80/ralloc2.cc:
+	  Fix for --optralloc-all.
+	* src/z80/gen.c:
+	  Fix for --reserve-regs-iy.
+
 2011-02-16 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/SDCCralloc.hpp,
